--- a/ReproductorStarWars/MainWindow.xaml
+++ b/ReproductorStarWars/MainWindow.xaml
@@ -5,32 +5,26 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ReproductorStarWars"
         mc:Ignorable="d"
-        Title="Reproductor Star Wars" Height="450" Width="800" Icon="128.ico">
+        Title="Reproductor Star Wars" Height="450" Width="710" Icon="128.ico">
     <DockPanel>
         <DockPanel DockPanel.Dock="Right" Width="150">
             <StackPanel DockPanel.Dock="Bottom">
-                <StackPanel Orientation="Horizontal">
-                    <RadioButton Margin="20,5,5,5" GroupName="Trailers" VerticalAlignment="Center" HorizontalAlignment="Center"></RadioButton>
-                    <TextBlock Margin="5" VerticalAlignment="Center" HorizontalAlignment="Center">Trailer 1</TextBlock>
-                </StackPanel>
-                <StackPanel Orientation="Horizontal">
-                    <RadioButton Margin="20,5,5,20" GroupName="Trailers" VerticalAlignment="Center" HorizontalAlignment="Center"
-                                 Click="RadioButton_Click"></RadioButton>
-                    <TextBlock Margin="5,5,5,20">Trailer 2</TextBlock>
+                <StackPanel Orientation="Vertical">
+                    <RadioButton x:Name="Trailer1RadioButton" Margin="5,5,5,5" GroupName="Trailers" VerticalAlignment="Center" HorizontalAlignment="Center"
+                                 Click="RadioButton_Click">Trailer 1</RadioButton>
+                    <RadioButton x:Name="Trailer2RadioButton" Margin="5,5,5,20" GroupName="Trailers" VerticalAlignment="Center" HorizontalAlignment="Center"
+                                 Click="RadioButton_Click">Trailer 2</RadioButton>
                 </StackPanel>
             </StackPanel>
             <StackPanel>
-                <Button Margin="20,5,20,5">Play</Button>
-                <Button Margin="20,5,20,5">Pause</Button>
-                <Button Margin="20,5,20,5">Stop</Button>
+                <Button Margin="20,5,20,5" Click="PlayButton_Click">Play</Button>
+                <Button Margin="20,5,20,5" Click="PauseButton_Click">Pause</Button>
+                <Button Margin="20,5,20,5" Click="StopButton_Click">Stop</Button>
             </StackPanel>
         </DockPanel>
-        <StackPanel Margin="5" DockPanel.Dock="Bottom" Orientation="Horizontal">
-            <CheckBox></CheckBox>
-            <TextBlock Text="Silencio"></TextBlock>
-        </StackPanel>
-        <Border BorderBrush="Black" BorderThickness="3">
-            <MediaElement LoadedBehavior="Manual"></MediaElement>
+        <CheckBox DockPanel.Dock="Bottom" Margin="5" Click="SilencioCheckBox_Click">Silencio</CheckBox>
+        <Border BorderBrush="Black" BorderThickness="1">
+            <MediaElement x:Name="ReproductorMediaPlayer" LoadedBehavior="Manual"></MediaElement>
         </Border>
     </DockPanel>
 </Window>
